# Voice-accent-Conversion

./: FAC.ipynb  README.md  environment.yaml  pyproject.toml
Accent_encoder/: accent_encoder_structure.py
pronunciation-encoder/: pronunciation_encoder.py
